Stop toggler displaying with no-wrap.

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
 #searchbar-nav {
   height: 80px;
   border-bottom: var(--grey-border);
+  flex-wrap: nowrap;
 }
 
 #searchbar-nav input {
